--- a/src/components/Wrapper/Wrapper.module.css
+++ b/src/components/Wrapper/Wrapper.module.css
@@ -1,6 +1,5 @@
 .wrapper {
   width: 100%;
-  margin: 0 20px;
   background-color: white;
   max-width: 1200px;
   border-radius: 30px;
@@ -35,7 +34,6 @@
 @media (max-width: 860px) {
   .wrapper {
     display: block;
-    margin: 20px;
   }
 }
 
